[project]
name = "graphy"
version = "0.1.8"
authors = [
  { name="Stricko", email="adams@strickos.com" },
]
description = "A small wrapper around GraphRAG that adds cosmos DB as a datastore."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'graphrag',
    'azure-core',
    'azure-ai-formrecognizer',
    'pandas',
    'tqdm',
    'future',
    'PyMuPDF',
    'azure-core',
    'azure-cosmos'
]

[project.scripts]
build-graph = "graphy.bin.build_graph:main"
ingest-file = "graphy.bin.ingest_file:main"
inspect-data = "graphy.bin.inspect_data:main"
parse-all = "graphy.bin.parse_all:main"
parse-file = "graphy.bin.parse_file:main"
publish-graph = "graphy.bin.publish_graph:main"
push-entities-to-search-index = "graphy.bin.push_entities_to_search_index:main"
query = "graphy.bin.query:main"
query-db = "graphy.bin.query_db:main"
verify-data-in-db = "graphy.bin.verify_data_in_db:main"
visualise-graph = "graphy.bin.visualise_graph:main"

[project.urls]
Homepage = "https://github.com/demo-ninjas/graphy"
Issues = "https://github.com/demo-ninjas/graphy/issues"