[project]
name = "graphy"
version = "0.1.9"
authors = [
  { name="Stricko", email="adams@strickos.com" },
]
description = "A small wrapper around GraphRAG that adds cosmos DB as a datastore."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'graphrag',
    'azure-core',
    'azure-ai-formrecognizer',
    'pandas',
    'tqdm',
    'future',
    'PyMuPDF',
    'azure-core',
    'azure-cosmos'
]

[project.scripts]
build-graph = "graphy.bin.build_graph:run_main"
ingest-file = "graphy.bin.ingest_file:run_main"
inspect-data = "graphy.bin.inspect_data:run_main"
parse-all = "graphy.bin.parse_all:run_main"
parse-file = "graphy.bin.parse_file:run_main"
publish-graph = "graphy.bin.publish_graph:run_main"
push-entities-to-search-index = "graphy.bin.push_entities_to_search_index:run_main"
query = "graphy.bin.query:run_main"
query-db = "graphy.bin.query_db:run_main"
verify-data-in-db = "graphy.bin.verify_data_in_db:run_main"
visualise-graph = "graphy.bin.visualise_graph:run_main"

[project.urls]
Homepage = "https://github.com/demo-ninjas/graphy"
Issues = "https://github.com/demo-ninjas/graphy/issues"